Add small naming changes and AdjList graph

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,3 +13,5 @@ repos:
         entry: python -m pytest
         language: system
         types: [python]
+        pass_filenames: false
+        always_run: true
